--- a/products.html
+++ b/products.html
@@ -117,7 +117,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/onion.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Onion</h5>
                     </div>
@@ -131,7 +131,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/potato.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Potato</h5>
                     </div>
@@ -145,7 +145,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/cauliflower.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Flower</h5>
                     </div>
@@ -159,7 +159,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/gourd.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Dudhi</h5>
                     </div>
@@ -173,7 +173,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/sweetpotato.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Sweet Potato</h5>
                     </div>
@@ -187,7 +187,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/tomato.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Tomato</h5>
                     </div>
@@ -201,7 +201,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/ladyfinger.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Bhendi</h5>
                     </div>
@@ -215,7 +215,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/gavar.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Gavar</h5>
                     </div>
@@ -232,7 +232,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/brinjal.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Brinjal</h5>
                     </div>
@@ -246,7 +246,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/capsicum.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Simla Mirch</h5>
                     </div>
@@ -260,7 +260,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/bittergourd.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Karela</h5>
                     </div>
@@ -274,7 +274,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/cucumber.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Cucumber</h5>
                     </div>
@@ -288,7 +288,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/carrots.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Carrot</h5>
                     </div>
@@ -302,7 +302,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/cabbage.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Cabbage</h5>
                     </div>
@@ -316,7 +316,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/ginger.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Adrak</h5>
                     </div>
@@ -330,7 +330,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/greenvatana.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Vatana</h5>
                     </div>
@@ -344,7 +344,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/greenchilli.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Mirch</h5>
                     </div>
@@ -358,7 +358,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/redchilli.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Mirch Tikha</h5>
                     </div>
@@ -372,7 +372,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/garlic.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Lasun</h5>
                     </div>
@@ -386,7 +386,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/spinach.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Palak</h5>
                     </div>
@@ -400,7 +400,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/methy.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Methi</h5>
                     </div>
@@ -414,7 +414,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/radish.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Mula</h5>
                     </div>
@@ -428,7 +428,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/springonion.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Spring Onion</h5>
                     </div>
@@ -442,7 +442,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/mintleaves.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Pudina</h5>
                     </div>
@@ -456,7 +456,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/lemon.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Lemon</h5>
                     </div>
@@ -470,7 +470,7 @@
                 <div class="card-img-top product-image">
                 	<img src="images/dhaniya.jpg" class="food-image">
                 </div>
-                <div class="card-body">
+                <div class="card-body product-card-body">
                     <div class="row">
                         <h5 class="col-12 product-name">Dhaniya</h5>
                     </div>
