--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<title>Urja Farm Eats</title>
+	<title>Urja Farm Eats | Contact Us</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
-	<meta name="description" content="Official website of Urja Farm Eats.">
-	<meta name="keywords" content="urja, farm, eats">
+	<meta name="description" content="Call us to get fresh fruits and vegetables delivered to your door-step.">
+	<meta name="keywords" content="urja, farm, eats, grocery, delivery, mumbai, food, home, free, sell, vegetables, fruits, online">
 	<meta name="author" content="Abhishek Joshi for 360 Digital Solutions">
 
 
@@ -63,9 +63,9 @@
 		<nav id="nav">
 			<ul>
 				<li><a href="https://urjafarmeats.com/">HOME</a></li>
-				<li><a href="about.html" class="active">ABOUT US</a></li>
+				<li><a href="about.html">ABOUT US</a></li>
 				<li><a href="products.html">OUR PRODUCTS</a></li>
-				<li><a href="contact.html">CONTACT US</a></li>
+				<li><a href="javascript: void(0)" class="active">CONTACT US</a></li>
 			</ul>
 		</nav>
 		<div class="menu-toggle" onclick="myFunction(this)" id="toggle">
@@ -100,7 +100,56 @@
 	<br>
 	<br>
 
-<h2 class="text-center topic">Content Here</h2>
+<h2 class="text-center topic-products">Contact Us</h2>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-6 col-sm-12">
+			<form class="ev_form" autocomplete="off">
+                <div class="form-group">
+                    <div class="form-required-show">
+                        <span class="form-required">* is for required.</span>
+                    </div>
+                    <label for="name">Name<span class="form-required"> *</span></label>
+                    <input type="text" name="full_name" class="form-control" placeholder="Enter Your Name" required></br>
+                    <label for="name">Mobile Number<span class="form-required"> *</span></label>
+                    <input type="tel" name="full_name" class="form-control" placeholder="Enter Your Mobile number" required>
+                	<small class="form-text text-muted"> We'll never share your mobile number with anyone else.</small>
+                	</br>
+                    <label>Email Address</label>
+                    <input type="email" name="email" class="form-control" placeholder="Enter Your Email">
+                    <small class="form-text text-muted"> We'll never share your email with anyone else.</small>
+                    </br>
+                    <label>Message</label><br>
+                    <textarea class="form-control txt-area" placeholder="Type your message here"></textarea>
+                    <br>
+
+
+                    <button class="btn btn-danger ev_btn " type="submit" name="sub_form">Submit</button>
+    
+
+                </div>
+            </form>
+		</div>
+		<div class="col-lg-6 col-sm-12">
+			<div class="contact-about">
+				<div class="contact-head"><i class="fas fa-mobile-alt contact-fa"></i> Mobile Number:</div>
+				<div class="contact-info">
+					<a href="tel:+919137600428" class="contact-call">+91 9137600428</a><br>
+					<a href="https://wa.me/7507309867" class="btn btn-outline-success btn-sm whatsapp-button">Click to chat on WhatsApp</a>
+				</div>
+				<div class="contact-head"><i class="far fa-envelope contact-fa"></i> Email Address:</div>
+				<div class="contact-info">urjafarmeats@gmail.com</div>
+				<div class="contact-head"><i class="fas fa-store contact-fa"></i> Address:</div>
+				<div class="contact-info">4/6, Malwani Municipal Colony, Near Malwani Police Station, Malad West, Mumbai-400075.</div>
+				<div class="contact-info-special"><i class="fas fa-photo-video contact-fa"></i> <b>Don't forget to check out our social media pages.</b><br>We are available on your favourite social media platforms.<br>You can place your orders by sending us direct messages too!</div>
+				<div class="contact-social-btn">
+					<a href="#" class="button btn insta footer-social1"><i class="fab fa-instagram"></i> instagram</a>
+					<a href="#" class="button btn fb footer-social2"><i class="fab fa-facebook-f"></i> facebook</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 
@@ -148,6 +197,7 @@
 					<p>
 						<a href="#" class="button btn insta footer-social1"><i class="fab fa-instagram"></i> instagram</a>
 						<a href="#" class="button btn fb footer-social2"><i class="fab fa-facebook-f"></i> facebook</a>
+						<a href="https://wa.me/7507309867" class="button btn btn-success whatsapp footer-social3"><i class="fab fa-whatsapp"></i> WhatsApp</a>
 					</p>
 				</div>
 				<div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 footer-blocks">
