--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<title>Urja Farm Eats</title>
+	<title>Urja Farm Eats | About Us</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
-	<meta name="description" content="Official website of Urja Farm Eats.">
-	<meta name="keywords" content="urja, farm, eats">
+	<meta name="description" content="Know about us and call us to get fresh fruits and vegetables delivered to your door-step.">
+	<meta name="keywords" content="urja, farm, eats, grocery, delivery, mumbai, food, home, free, sell, vegetables, fruits, online">
 	<meta name="author" content="Abhishek Joshi for 360 Digital Solutions">
 
 
@@ -297,6 +297,7 @@
 					<p>
 						<a href="#" class="button btn insta footer-social1"><i class="fab fa-instagram"></i> instagram</a>
 						<a href="#" class="button btn fb footer-social2"><i class="fab fa-facebook-f"></i> facebook</a>
+						<a href="https://wa.me/7507309867" class="button btn btn-success whatsapp footer-social3"><i class="fab fa-whatsapp"></i> WhatsApp</a>
 					</p>
 				</div>
 				<div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 footer-blocks">
