--- a/products.html
+++ b/products.html
@@ -146,7 +146,7 @@
 
 <div class="product-search text-center">
     <div class="product-search-bar">
-        <input type="text" placeholder="Search for product" class="product-search-input" onkeyup="suggest()" id="search-box">
+        <input type="text" placeholder="Search for product" class="product-search-input" onkeyup="suggest()" id="search-box" autocomplete="off">
         <button type="button" onclick="clearsearch()" class="product-search-icon" id="search-btn"><i class="fas fa-search"></i></button>
     </div>
 </div>
