--- a/contact.html
+++ b/contact.html
@@ -212,7 +212,7 @@
 						</form>
 					</p>
 					<p class="credits">
-						Created by Abhishek Joshi (+919757468857)<br>for 360 Digital Solutions <img class="digi-sol" src="images/digi_sol.jpg">
+						Created by Abhishek Joshi (+919757468857)<br>for <a href="#" class="nihar">360 Digital Solutions <img class="digi-sol" src="images/digi_sol.jpg"></a>
 					</p>
 				</div>
 			</div>
