--- a/products.html
+++ b/products.html
@@ -587,8 +587,8 @@
 						</form>
 					</p>
 					<p class="credits">
-						Created by Abhishek Joshi (+919757468857)<br>for 360 Digital Solutions <img class="digi-sol" src="images/digi_sol.jpg">
-					</p>
+                        Created by Abhishek Joshi (+919757468857)<br>for <a href="#" class="nihar">360 Digital Solutions <img class="digi-sol" src="images/digi_sol.jpg"></a>
+                    </p>
 				</div>
 			</div>
 			<div class="copyright text-center"><i class="far fa-copyright"></i> 2020 Urja Farm Eats. All rights reserved.</div>
