--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,19 @@
 	<meta name="keywords" content="urja, farm, eats, grocery, delivery, mumbai, food, home, free, sell, vegetables, fruits, online">
 	<meta name="author" content="Abhishek Joshi for 360 Digital Solutions">
 
+	<!--whatsapp and fb-->
+	<meta property="og:title" content="Urja Farm Eats | Contact Us" />
+	<meta property="og:description" content="Call us to get fresh fruits and vegetables delivered to your door-step." />
+	<meta property="og:url" content="https://urjafarmeats.com/contact.html" />
+	<meta property="og:type" content="website" />
+	<meta property="og:image" content="images/favicon.png" />
+
+	<!--twitter-->
+	<meta property="twitter:card" content="summary_large_image" />
+	<meta property="twitter:title" content="Urja Farm Eats | Contact Us" />
+	<meta property="twitter:description" content="Call us to get fresh fruits and vegetables delivered to your door-step." />
+	<meta property="twitter:image" content="images/favicon.png" />
+
 
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 
@@ -38,9 +51,9 @@
 	<script src="https://kit.fontawesome.com/48f5df0e7d.js" crossorigin="anonymous"></script>
 
 
-	<link rel="shortcut icon" href="images/logo.jpg">
-    <link rel="icon" href="images/logo.jpg">
-    <link rel="apple-touch-icon" href="images/logo.jpg">
+	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" href="images/favicon.png" type="image/png">
 
 	
 	
@@ -101,7 +114,7 @@
 	<br>
 
 <h2 class="text-center topic-products">Contact Us</h2>
-<div class="container">
+<div class="container contact-set">
 	<div class="row">
 		<div class="col-lg-6 col-sm-12">
 			<form class="ev_form" autocomplete="off">
@@ -110,17 +123,17 @@
                         <span class="form-required">* is for required.</span>
                     </div>
                     <label for="name">Name<span class="form-required"> *</span></label>
-                    <input type="text" name="full_name" class="form-control" placeholder="Enter Your Name" required></br>
-                    <label for="name">Mobile Number<span class="form-required"> *</span></label>
-                    <input type="tel" name="full_name" class="form-control" placeholder="Enter Your Mobile number" required>
+                    <input type="text" id="name" class="form-control" placeholder="Enter Your Name" autocomplete="off" required></br>
+                    <label for="number">Mobile Number<span class="form-required"> *</span></label>
+                    <input type="tel" id="number" class="form-control" placeholder="Enter Your Mobile number" autocomplete="off" required>
                 	<small class="form-text text-muted"> We'll never share your mobile number with anyone else.</small>
                 	</br>
-                    <label>Email Address</label>
-                    <input type="email" name="email" class="form-control" placeholder="Enter Your Email">
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" class="form-control" placeholder="Enter Your Email" autocomplete="off">
                     <small class="form-text text-muted"> We'll never share your email with anyone else.</small>
                     </br>
-                    <label>Message</label><br>
-                    <textarea class="form-control txt-area" placeholder="Type your message here"></textarea>
+                    <label for="message">Message</label><br>
+                    <textarea id="message" class="form-control txt-area" placeholder="Type your message here"></textarea>
                     <br>
 
 
@@ -143,12 +156,18 @@
 				<div class="contact-info">4/6, Malwani Municipal Colony, Near Malwani Police Station, Malad West, Mumbai-400075.</div>
 				<div class="contact-info-special"><i class="fas fa-photo-video contact-fa"></i> <b>Don't forget to check out our social media pages.</b><br>We are available on your favourite social media platforms.<br>You can place your orders by sending us direct messages too!</div>
 				<div class="contact-social-btn">
-					<a href="#" class="button btn insta footer-social1"><i class="fab fa-instagram"></i> instagram</a>
-					<a href="#" class="button btn fb footer-social2"><i class="fab fa-facebook-f"></i> facebook</a>
+					<a href="https://www.instagram.com/urjafarmeats/" class="button btn insta footer-social1"><i class="fab fa-instagram"></i> instagram</a>
+					<a href="https://www.facebook.com/Urja-Farm-Eats-108624907533208/" class="button btn fb footer-social2"><i class="fab fa-facebook-f"></i> facebook</a>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
+
+<h2 class="text-center topic-">Locate Us Here <span class="form-required"><i class="fas fa-search-location"></i></span></h2>
+
+<div class="container">
+	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15072.874724276862!2d72.8424639!3d19.1856487!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4c1b03ba396a3e5c!2sUrja%20Farm%20Eats!5e0!3m2!1sen!2sin!4v1590300800279!5m2!1sen!2sin" style="width: 100%;" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 
 
@@ -195,8 +214,8 @@
 						<br>
 					</p>
 					<p>
-						<a href="#" class="button btn insta footer-social1"><i class="fab fa-instagram"></i> instagram</a>
-						<a href="#" class="button btn fb footer-social2"><i class="fab fa-facebook-f"></i> facebook</a>
+						<a href="https://www.instagram.com/urjafarmeats/" class="button btn insta footer-social1"><i class="fab fa-instagram"></i> instagram</a>
+						<a href="https://www.facebook.com/Urja-Farm-Eats-108624907533208/" class="button btn fb footer-social2"><i class="fab fa-facebook-f"></i> facebook</a>
 						<a href="https://wa.me/917507309867" class="button btn btn-success whatsapp footer-social3"><i class="fab fa-whatsapp"></i> WhatsApp</a>
 					</p>
 				</div>
@@ -212,7 +231,7 @@
 						</form>
 					</p>
 					<p class="credits">
-						Created by Abhishek Joshi (+919757468857)<br>for <a href="#" class="nihar">360 Digital Solutions <img class="digi-sol" src="images/digi_sol.jpg"></a>
+						Created by Abhishek Joshi (+919757468857)<br>for <a href="https://www.instagram.com/360digitalsol/" class="nihar">360 Digital Solutions <img class="digi-sol" src="images/digi_sol.jpg"></a>
 					</p>
 				</div>
 			</div>
