--- a/products.html
+++ b/products.html
@@ -5,9 +5,22 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
-	<meta name="description" content="Have a look at our products and get fresh fruits and vegetables delivered to your door-step.">
+	<meta name="description" content="Have a look at our products and call us to get fresh fruits and vegetables delivered to your door-step.">
     <meta name="keywords" content="urja, farm, eats, grocery, delivery, mumbai, food, home, free, sell, vegetables, fruits, online">
 	<meta name="author" content="Abhishek Joshi for 360 Digital Solutions">
+
+    <!--whatsapp and fb-->
+    <meta property="og:title" content="Urja Farm Eats | Contact Us" />
+    <meta property="og:description" content="Have a look at our products and call us to get fresh fruits and vegetables delivered to your door-step." />
+    <meta property="og:url" content="https://urjafarmeats.com/contact.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/favicon.png" />
+
+    <!--twitter-->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Urja Farm Eats | Contact Us" />
+    <meta property="twitter:description" content="Have a look at our products and call us to get fresh fruits and vegetables delivered to your door-step." />
+    <meta property="twitter:image" content="images/favicon.png" />
 
 
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
@@ -38,9 +51,9 @@
 	<script src="https://kit.fontawesome.com/48f5df0e7d.js" crossorigin="anonymous"></script>
 
 
-	<link rel="shortcut icon" href="images/logo.jpg">
-    <link rel="icon" href="images/logo.jpg">
-    <link rel="apple-touch-icon" href="images/logo.jpg">
+	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" href="images/favicon.png" type="image/png">
 
 	
 	
@@ -570,8 +583,8 @@
 						<br>
 					</p>
 					<p>
-						<a href="#" class="button btn insta footer-social1"><i class="fab fa-instagram"></i> instagram</a>
-						<a href="#" class="button btn fb footer-social2"><i class="fab fa-facebook-f"></i> facebook</a>
+						<a href="https://www.instagram.com/urjafarmeats/" class="button btn insta footer-social1"><i class="fab fa-instagram"></i> instagram</a>
+						<a href="https://www.facebook.com/Urja-Farm-Eats-108624907533208/" class="button btn fb footer-social2"><i class="fab fa-facebook-f"></i> facebook</a>
                         <a href="https://wa.me/917507309867" class="button btn btn-success whatsapp footer-social3"><i class="fab fa-whatsapp"></i> WhatsApp</a>
 					</p>
 				</div>
@@ -587,7 +600,7 @@
 						</form>
 					</p>
 					<p class="credits">
-                        Created by Abhishek Joshi (+919757468857)<br>for <a href="#" class="nihar">360 Digital Solutions <img class="digi-sol" src="images/digi_sol.jpg"></a>
+                        Created by Abhishek Joshi (+919757468857)<br>for <a href="https://www.instagram.com/360digitalsol/" class="nihar">360 Digital Solutions <img class="digi-sol" src="images/digi_sol.jpg"></a>
                     </p>
 				</div>
 			</div>
