--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,11 @@
 	<meta property="og:description" content="Call us to get fresh fruits and vegetables delivered to your door-step." />
 	<meta property="og:url" content="https://urjafarmeats.com/contact.html" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="images/favicon.png" />
+	<meta property="og:image" content="https://urjafarmeats.com/images/favicon.png" />
+	<meta property="og:image:type" content="image/png" />
+	<meta property="og:image:width" content="512" />
+	<meta property="og:image:height" content="512" />
+	<meta property="og:image:alt" content="Urja Farm Eats" />
 
 	<!--twitter-->
 	<meta property="twitter:card" content="summary_large_image" />
