--- a/products.html
+++ b/products.html
@@ -12,9 +12,13 @@
     <!--whatsapp and fb-->
     <meta property="og:title" content="Urja Farm Eats | Contact Us" />
     <meta property="og:description" content="Have a look at our products and call us to get fresh fruits and vegetables delivered to your door-step." />
-    <meta property="og:url" content="https://urjafarmeats.com/contact.html" />
+    <meta property="og:url" content="https://urjafarmeats.com/products.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/favicon.png" />
+    <meta property="og:image" content="https://urjafarmeats.com/images/favicon.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+    <meta property="og:image:alt" content="Urja Farm Eats" />
 
     <!--twitter-->
     <meta property="twitter:card" content="summary_large_image" />
