--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 	<meta property="twitter:card" content="summary_large_image" />
 	<meta property="twitter:title" content="Urja Farm Eats | Contact Us" />
 	<meta property="twitter:description" content="Know about us and call us to get fresh fruits and vegetables delivered to your door-step." />
-	<meta property="twitter:image" content="images/favicon.png" />
+	<meta property="twitter:image" content="https://urjafarmeats.com/images/favicon.png" />
 
 
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
