--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="Abhishek Joshi for 360 Digital Solutions">
 
 	<!--whatsapp and fb-->
-	<meta property="og:title" content="Urja Farm Eats | Contact Us" />
+	<meta property="og:title" content="Urja Farm Eats" />
 	<meta property="og:description" content="Get fresh fruits and vegetables delivered to your door-step." />
 	<meta property="og:url" content="https://urjafarmeats.com" />
 	<meta property="og:type" content="website" />
@@ -22,7 +22,7 @@
 
 	<!--twitter-->
 	<meta property="twitter:card" content="summary_large_image" />
-	<meta property="twitter:title" content="Urja Farm Eats | Contact Us" />
+	<meta property="twitter:title" content="Urja Farm Eats" />
 	<meta property="twitter:description" content="Get fresh fruits and vegetables delivered to your door-step." />
 	<meta property="twitter:image" content="https://urjafarmeats.com/images/favicon.png" />
 
