--- a/about.html
+++ b/about.html
@@ -230,7 +230,7 @@
 
 <div class="container">
 	<h2 class="text-center topic">Why to Choose Us?</h2>
-	<p class="why-us">Your safety is our primary concern. Our team is committed to ensure that you get fresh and healthy groceries at your door-step. We also assure fair trade with farmers. Additionally, we ensure hygenic packing, 100% food safety and best in class food quality. We <b>don't</b> use any chemicals and directly provide the groceries from the farm. Our rates too, are lower than the market rates.
+	<p class="why-us">Your safety is our primary concern. Our team is committed to ensure that you get fresh and healthy groceries at your door-step. We also assure fair trade with farmers. Additionally, we ensure hygienic packing, 100% food safety and best in class food quality. We <b>don't</b> use any chemicals and directly provide the groceries from the farm. Our rates too, are lower than the market rates.
 	</p>
 	<p class="covid text-center text-danger">
 		We <b>strictly</b> follow the below specified rules while working.
